<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ContactUsActivity">
    <android.support.v7.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@null"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_constraintTop_toTopOf="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_back"/>
        <TextView
                android:id="@+id/toolBar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/colorTextTitle"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="0sp"
                android:gravity="center_horizontal"
                android:text="@string/package_title"
                android:fontFamily="@font/avenir_light"
                app:layout_constraintTop_toTopOf="@+id/toolBar" android:layout_marginStart="25dp"
                app:layout_constraintStart_toStartOf="@id/ivBack" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>

    </android.support.v7.widget.Toolbar>
    <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:background="@drawable/ic_header_image1" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/colorTextTitle"
            android:letterSpacing="0.02"
            android:lineSpacingExtra="0sp"
            android:gravity="center_horizontal"
            android:text="@string/package_info"
            android:fontFamily="@font/avenir_light"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView"/>


    <TextView
            android:text="@string/package_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:fontFamily="@font/avenir_book"
            android:id="@+id/textView1"
            android:textSize="18sp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/package_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLevel"
            android:fontFamily="@font/avenir_book"
            android:textColor="@color/colorTextHint"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/textView1"
            android:layout_marginStart="24dp" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"/>

    <TextView
            android:text="@string/package_program"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:fontFamily="@font/avenir_book"
            android:id="@+id/textView2"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/textView1" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginTop="15dp"/>
    <TextView
            android:text="@string/package_program"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvProgram"
            android:fontFamily="@font/avenir_book"
            android:textColor="@color/colorTextHint"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginStart="24dp" app:layout_constraintTop_toBottomOf="@+id/tvLevel"
            android:layout_marginTop="15dp"/>

    <TextView
            android:text="@string/package_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:fontFamily="@font/avenir_book"
            android:id="@+id/textView3"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="15dp"/>
    <TextView
            android:text="@string/package_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvHours"
            android:fontFamily="@font/avenir_book"
            android:textColor="@color/colorTextHint"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/tvProgram" app:layout_constraintStart_toEndOf="@+id/textView3"
            android:layout_marginStart="24dp"/>
    <TextView
            android:text="@string/package_materials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:fontFamily="@font/avenir_book"
            android:id="@+id/textView4"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="15dp"/>

    <TextView
            android:text="@string/package_materials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvMaterials"
            android:fontFamily="@font/avenir_book"
            android:textColor="@color/colorTextHint"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/tvHours" app:layout_constraintStart_toEndOf="@+id/textView4"
            android:layout_marginStart="24dp"/>

    <TextView
            android:text="@string/teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:fontFamily="@font/avenir_book"
            android:id="@+id/textView5"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:text="@string/teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTeacher"
            android:fontFamily="@font/avenir_book"
            android:textColor="@color/colorTextHint"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/tvMaterials" app:layout_constraintStart_toEndOf="@+id/textView5"
            android:layout_marginStart="24dp"/>

    <Button
            android:id="@+id/btnUpdate"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorTextTitle"
            android:letterSpacing="0.09"
            android:lineSpacingExtra="0sp"
            android:text="@string/update"
            android:background="@color/colorMJR"
            android:fontFamily="@font/avenir_book"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTeacher"/>
</android.support.constraint.ConstraintLayout>