<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StudentInfoActivity">
    <android.support.v7.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@null"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_back"/>

    </android.support.v7.widget.Toolbar>

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="330dp"
            android:background="@drawable/ic_header_image1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
            android:id="@+id/imageUser"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/ic_user"
            android:layout_marginTop="80dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintTop_toTopOf="@+id/imageView"/>
    <TextView
            android:id="@+id/tvTeacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/colorTextTitle"
            android:letterSpacing="0.02"
            android:lineSpacingExtra="0sp"
            android:gravity="center_horizontal"
            android:text="Kacey Morgan"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageUser"
            android:layout_marginTop="20dp"/>
    <TextView
            android:id="@+id/textView"
            android:text="@string/phone_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" />
    <TextView
            android:text="@string/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPhone"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="5dp"/>"/>
    <ImageView
            android:id="@+id/imageView1"
            android:layout_width="380dp"
            android:layout_height="1dp"
            android:background="@drawable/ic_underline"
            app:layout_constraintTop_toBottomOf="@+id/tvPhone"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:id="@+id/textView1"
            android:text="@string/email_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
    />
    <TextView
            android:id="@+id/tvEmail"
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView1"
            android:layout_marginTop="5dp"/>"/>
    <ImageView
            android:id="@+id/imageView2"
            android:layout_width="380dp"
            android:layout_height="1dp"
            android:background="@drawable/ic_underline"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:id="@+id/textView2"
            android:text="@string/address_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" />
    <TextView
            android:id="@+id/tvAddress"
            android:text="@string/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginTop="5dp"/>"/>
    <ImageView
            android:id="@+id/imageView3"
            android:layout_width="380dp"
            android:layout_height="1dp"
            android:background="@drawable/ic_underline"
            app:layout_constraintTop_toBottomOf="@+id/tvAddress"
            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp" android:background="@drawable/ic_whatsapp"
            android:id="@+id/iBtnWhatsapp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
            android:id="@+id/imageView4"
            android:layout_width="380dp"
            android:layout_height="1dp"
            android:background="@drawable/ic_underline"
            app:layout_constraintTop_toBottomOf="@+id/iBtnWhatsapp"
            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>