<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddClassActivity"
        android:orientation="vertical">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"
                    android:background="@drawable/ic_header_image"/>
            <TextView
                    android:id="@+id/textClassNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Name of the Class"
                    android:textSize="24sp"
                    android:textColor="@color/colorTextTitle"
                    android:letterSpacing="0.02"
                    android:lineSpacingExtra="0sp"
                    android:gravity="center_horizontal"
                    android:fontFamily="@font/avenir_light"
                    android:layout_marginTop="-120dp"/>
            <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="16sp"
                    android:textColor="@color/colorTextHint"
                    android:letterSpacing="0.02"
                    android:lineSpacingExtra="0sp"
                    android:gravity="center_horizontal"
                    android:fontFamily="@font/avenir_book"
                    android:layout_marginTop="90dp"/>
            <EditText
                    android:id="@+id/etNameStudent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:textSize="24sp"
                    android:textColor="@color/colorTextPrimary"
                    android:letterSpacing="0.02"
                    android:lineSpacingExtra="0sp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/avenir_book"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="15dp"/>
            <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="380dp"
                    android:layout_height="1dp"
                    android:background="@drawable/ic_underline"
                    android:layout_marginTop="10dp"/>
            <TextView
                    android:id="@+id/tvEnter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/colorTextHint"
                    android:letterSpacing="0.02"
                    android:lineSpacingExtra="0sp"
                    android:gravity="center_horizontal"
                    android:text="@string/teacher"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/avenir_book"/>
            <EditText
                    android:id="@+id/etTeacher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:textSize="24sp"
                    android:textColor="@color/colorTextPrimary"
                    android:letterSpacing="0.02"
                    android:lineSpacingExtra="0sp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/avenir_book"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="15dp"/>
            <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="380dp"
                    android:layout_height="1dp"
                    android:background="@drawable/ic_underline"/>
            <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/colorTextHint"
                    android:letterSpacing="0.02"
                    android:lineSpacingExtra="0sp"
                    android:gravity="center_horizontal"
                    android:text="@string/lesson"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/avenir_book"/>
            <EditText
                    android:id="@+id/etLesson"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:textSize="24sp"
                    android:textColor="@color/colorTextPrimary"
                    android:background="@android:color/transparent"
                    android:letterSpacing="0.02"
                    android:lineSpacingExtra="0sp"
                    android:fontFamily="@font/avenir_book"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="15dp"/>
            <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="380dp"
                    android:layout_height="1dp"
                    android:background="@drawable/ic_underline"/>
            <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorTextHint"
                    android:letterSpacing="0.02"
                    android:lineSpacingExtra="0sp"
                    android:gravity="center_horizontal"
                    android:text="@string/schedule"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/avenir_book"/>
            <EditText
                    android:id="@+id/etSchedule"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:textSize="24sp"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorTextPrimary"
                    android:letterSpacing="0.02"
                    android:lineSpacingExtra="0sp"
                    android:fontFamily="@font/avenir_book"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="15dp"/>
            <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="380dp"
                    android:layout_height="1dp"
                    android:background="@drawable/ic_underline"/>
            <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/colorTextHint"
                    android:letterSpacing="0.02"
                    android:lineSpacingExtra="0sp"
                    android:gravity="center_horizontal"
                    android:text="@string/comment"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/avenir_book"/>
            <MultiAutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:id="@+id/mltTextComent"
                    android:ems="10"
                    android:textSize="24sp"
                    android:textColor="@color/colorTextPrimary"
                    android:letterSpacing="0.02"
                    android:lineSpacingExtra="0sp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/avenir_book"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="15dp"/>
            <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="380dp"
                    android:layout_height="1dp"
                    android:background="@drawable/ic_underline"/>
            <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/colorTextTitle"
                    android:letterSpacing="0.09"
                    android:lineSpacingExtra="0sp"
                    android:text="@string/add"
                    android:background="@color/colorMJR"
                    android:fontFamily="@font/avenir_book"
                    android:layout_marginStart="75dp"
                    android:layout_marginTop="20dp"/>
            <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/colorTextTitle"
                    android:letterSpacing="0.09"
                    android:lineSpacingExtra="0sp"
                    android:text="@string/cancel"
                    android:background="@color/colorBtnCancel"
                    android:fontFamily="@font/avenir_book"
                    android:layout_marginTop="-48.5dp"
                    android:layout_marginLeft="220dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>